refactoring, made kernel example compatible with both rvm and qemu, fixed io blocking issues